# glide

./: Cargo.toml  README.md  accidental.jsonl  flake.nix  intentional.jsonl
scripts/: analyze.py
src/: algorithm.rs  backend.rs  detect.rs  episode.rs  keyboard.rs  main.rs  record.rs  sampler.rs
