[package]
name = "glide"
version = "0.1.0"
edition = "2021"
description = "Touchpad motion detection daemon — emits activation signals to consumers like kanata"

[dependencies]
evdev = "0.12"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
